test/library/standard/Sort/errors/sortDomainArray.assoc1.good
sortDomainArray.chpl:49: error: sort() is not supported on domains
